src/test/ui/parser/issues/issue-2354.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-2354.rs:13:52
   |
LL | fn foo() {
   |          - unclosed delimiter
...
LL |
   |                                                    ^

error: aborting due to previous error

